# PubPlot

./: .gitignore  README.md  aanda.mplstyle  jbuilder.py  pubplot.py  pyproject.toml  testing.ipynb
examples/: HowToUse.ipynb  HowToUse_NEw.ipynb  Test.ipynb
pubplot/: __init__.py  formatter.py
pubplotlib/: __init__.py  formatter.py  jbuilder.py  pubplotlib.py  ticksetter.py
pubplotlib/assets/: aanda.mplstyle  journals.yaml  pubplot.mplstyle
